--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
     <div class="container">
         <div class="todo-app">
             <h2>To-Do List <img src="images/icon.png" alt=""></h2>
+            <div class="row">
+                <input type="text" id="input-box" placeholder="Add your task">
+                <button>Add</button>
+            </div>
         </div>
+        
         
     </div>
 
